Url links added to footer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
       <h1>Tywydd</h1>
     </main>
     <footer>
-      Coded by Sarah Whiting, open-sourced on GitHub, and hosted on Netlify
+      Coded by
+      <a href="https://github.com/SWhitK" target="_blank"> Sarah Whiting</a>,
+      open-sourced on
+      <a href="https://github.com/SWhitK/tywydd.git" target="_blank"> GitHub</a
+      >, and hosted on
+      <a href="https://tywydd.netlify.app/" target="_blank"> Netlify</a>
     </footer>
   </body>
 </html>
