Added the html to project

--- a/index.html
+++ b/index.html
@@ -6,9 +6,24 @@
     <title>Tywydd App</title>
   </head>
   <body>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city.." required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
     <main>
-      <h1>Tywydd</h1>
+      <div>
+        <h1>Cardiff</h1>
+        <p>
+          Sunday 12:12, scattered clouds
+          <br />
+          Humidity: 66%, Wind: 3.13km/h
+        </p>
+      </div>
+      <div>🌤️ 12°C</div>
     </main>
+
     <footer>
       Coded by
       <a href="https://github.com/SWhitK" target="_blank"> Sarah Whiting</a>,
