--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
   <body>
     <div class="weather-app">
       <header>
-        <form>
-          <input type="search" placeholder="Enter a city.." required />
-          <input type="submit" value="Search" />
+        <form class="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city..."
+            required
+            class="search-form-input"
+          />
+          <input type="submit" value="Search" class="search-button" />
         </form>
       </header>
       <main>
@@ -31,7 +36,7 @@
         </div>
         <div>🌤️ 12°C</div>
       </main>
-
+      <hr />
       <footer>
         Coded by
         <a href="https://github.com/SWhitK" target="_blank"> Sarah Whiting</a>,
