--- a/index.html
+++ b/index.html
@@ -26,15 +26,20 @@
         </form>
       </header>
       <main>
-        <div>
-          <h1>Cardiff</h1>
-          <p>
-            Sunday 12:12, scattered clouds
-            <br />
-            Humidity: 66%, Wind: 3.13km/h
-          </p>
+        <div class="weather-app-data">
+          <div>
+            <h1 class="current-city">Cardiff</h1>
+            <p class="current-weather-details">
+              Sunday 12:12, scattered clouds
+              <br />
+              Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
+            </p>
+          </div>
+          <div class="current-temp-container">
+           <div class="current-temp-icon"> 🌤️ </div>
+           <div class="current-temp-data">12</div>
+             <div class="current-temp-unit">°C</div>
         </div>
-        <div>🌤️ 12°C</div>
       </main>
       <hr />
       <footer>
