--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-   <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>"
+   <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <title>Tywydd App</title>
   </head>
   <body>
@@ -31,7 +31,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="current-city" id="city">Cardiff</h1>
+            <h1 class="current-city" id="city"></h1>
             <p class="current-weather-details">
               Sunday 12:12, scattered clouds
               <br />
@@ -40,7 +40,7 @@
           </div>
           <div class="current-temp-container">
            <div class="current-temp-icon"> 🌤️ </div>
-           <div class="current-temp-data">12</div>
+           <div class="current-temp-data" id="temperature">12</div>
              <div class="current-temp-unit">°C</div>
         </div>
       </main>
