--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
           <div>
             <h1 class="current-city" id="city"></h1>
             <p class="current-weather-details">
-              Sunday 12:12, scattered clouds
+                <span id="time"></span>, <span id="description"></span>
               <br />
-              Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
+              Humidity: <strong id="humidity"></strong>, Wind: <strong id="wind-speed"></strong>
             </p>
           </div>
           <div class="current-temp-container">
-           <div class="current-temp-icon"> 🌤️ </div>
-           <div class="current-temp-data" id="temperature">12</div>
+           <div class="current-temp-icon" id="icon"></div>
+           <div class="current-temp-data" id="temperature"></div>
              <div class="current-temp-unit">°C</div>
         </div>
       </main>
