--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-   <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <title>Tywydd App</title>
   </head>
   <body>
@@ -33,16 +33,21 @@
           <div>
             <h1 class="current-city" id="city"></h1>
             <p class="current-weather-details">
-                <span id="time"></span>, <span id="description"></span>
+              <span id="time"></span>, <span id="description"></span>
               <br />
-              Humidity: <strong id="humidity"></strong>, Wind: <strong id="wind-speed"></strong>
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed"></strong>
             </p>
           </div>
+
           <div class="current-temp-container">
-           <div class="current-temp-icon" id="icon"></div>
-           <div class="current-temp-data" id="temperature"></div>
-             <div class="current-temp-unit">°C</div>
+            <div class="current-temp-icon" id="icon"></div>
+            <div class="current-temp-data" id="temperature"></div>
+            <div class="current-temp-unit">°C</div>
+          </div>
         </div>
+
+        <div class="weather-forecast" id="forecast"></div>
       </main>
       <hr />
       <footer>
