--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <form class="search-form" id="search-form">
           <input
             type="search"
-            placeholder="Enter a city..."
+            placeholder="Enter a location..."
             required
             class="search-form-input"
             id="search-form-input"
